# VFTE

./: .env.example  .gitignore  CONSENT-PLANE.md  Dockerfile.cpu  README.md  auth.py  config.py  consent_api.py  main.py  notify.py  pyproject.toml  ratelimit.py  requirements-dev.txt  requirements-diarizen.txt  requirements-diart.txt  requirements-eval.txt  requirements.txt
docs/: ami-eval-plan.md  bakeoff-offline.md  deletion-receipt-verify.js  deletion-receipt-verify.py  deletion-receipt.md  der-eval.md  diarization-experiment-log.md  diarization-flow.md  diarization-ideal-flow.md  embedder-bench.md  eval-conversation.md  id-eval.md  in-person-phone-p2p.md  research_doc_diarization.md  spikes.md  vft-scoping-model.md  voiceprint-embedding-flow.md
eval_harness/: README.md  TEST-PLAN.md  __init__.py  compare.py  fp_attribute.py  fp_diarize.py  fp_identify.py  fp_latency.py  fp_split.py  fp_transcribe.py  requirements-diarizen.txt  run.py  server.py
evaluation/: __init__.py  der.py  der_eval.py  diarizen_eval.py  harness.py  id_eval.py  rttm.py
fpm/: __init__.py  audio.py  enclave.py  enroll.py  identify.py  identify_spans.py  match.py  receipts.py  types.py
frontend/: next.config.ts  package-lock.json  package.json  tsconfig.json
scripts/: diarize_clip.py  fetch_models.sh  prefetch_diarizen_model.py  prefetch_diart_models.py  seed_consent_demo.py  seed_p4_demo.py  test_email.py
tests/: mock_diarizer.py  test_audio.py  test_auth.py  test_consent.py  test_consent_api.py  test_crypto.py  test_deletion_receipt.py  test_der.py  test_der_eval.py  test_diarize_api.py  (+30 more)
(+80 files in other folders)
